# BIS-Standards-Recommendation-Engine

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  inference.py  pyproject.toml  requirements.txt  results.json  server.py
app/: logger.py  main.py
app/embeddings/: __init__.py  embedding.py
app/index/: __init__.py  main.py  manager.py
app/index/providers/: chroma.py  type.py
app/index/retriever/: __init__.py  auto_retriever.py  bm25_retriever.py  hybrid_bis_retriever.py  rerank_retriever.py
app/ingestion/: __init__.py  bis_pdf_ingestor.py  parsing.py
app/llm/: __init__.py  main.py  manager.py  rationale_generator.py
app/llm/providers/: __init__.py  openai.py  opensource.py
app/models/: __init__.py  schemas.py
app/storage/: __init__.py  main.py  manager.py
app/storage/providers/: __init__.py  chroma.py
data/: parsed_standards.json  public_test_set.json  team_results.json
scripts/: ingest_bis.py
storage/chromadb/d5d949c4-5864-457f-8192-1238cb220214/: index_metadata.pickle
ui/: streamlit_app.py
