[project]
name = "BIS-Standards-Engine"
version = "1.0.0"
description = "Hybrid RAG pipeline for BIS Standards Recommendation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.1.4",
    "chromadb>=1.4.1",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.35.0",
    "uvicorn[standard]>=0.34.0",
]
